2013-07-17  6.8.6-7 Dirk Lemstra <dirk@snakeware...>
  * Fix memory leak in CloneImageArtifacts and CloneImageProfiles.
  * Minor fix for the clipMask property in Magick++.

2013-07-16  6.8.6-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-6, SVN revision 12718.

2013-07-16  6.8.6-6 Cristy  <quetzlzacatenango@image...>
  * JPEG ICC color profile requires null after ICC tag (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23756).
  * Don't sync channels for the -unsharp option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23740).
  * Magick++ version so bump (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23752).

2013-07-15  6.8.6-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-5, SVN revision 12684.

2013-07-12  6.8.6-5 Dirk Lemstra <dirk@snakeware...>
  * Fixed calculation of pixel area count limit flag ('@').
  * Added option to enable OpenMP to configure.exe and improved creation
    of x64 project file

2013-07-10  6.8.6-5 Cristy  <quetzlzacatenango@image...>
  * compare exits with a non-zero exit code when no error (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23722).
  * correct calculation of quantization error (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?t=23734).
  * correct quantize tree walking mistake for RiemersmaDither (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=23735).

2013-07-10  6.8.6-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.6-4, SVN revision 12661.

2013-07-09  6.8.6-4 Dirk Lemstra <dirk@snakeware...>
  * Added combineImages, evaluateImages, mergeImageLayers, optimizeImageLayers
    optimizePlusImageLayers and separateImages to STL.h (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=23699).
  * Added support for the fill area flag ('^') and the pixel area