@@ -1,3 +1,7 @@
+2013-07-21  6.8.6.7 Glenn Randers-Pehrson <glennrp@image...>
+  * Do not write "jpeg:" properties in a PNG output file (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23794).
+
 2013-07-17  6.8.6-7 Dirk Lemstra <dirk@snakeware...>
   * Fix memory leak in CloneImageArtifacts and CloneImageProfiles.
   * Minor fix for the clipMask property in Magick++.
@@ -11,7 +15,7 @@
   * Don't sync channels for the -unsharp option (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23740).
   * Magick++ version so bump (reference
-   http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23752).
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23752).
 
 2013-07-15  6.8.6-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.6-5, SVN revision 12684.
